--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
+                <img src="https://t.ctcdn.com.br/38c-1ashudTbfMfKDQGv0NCwNDE=/166x106:1598x912/640x360/smart/i328663.jpeg" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="img/computador.png" alt="Ícone de computador">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC9WKR3dP_F1kqBqvcLohXfSdMehmkC1xUvw&s" alt="Ícone de computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
-                <img src="img/celular.png" alt="Ícone de celular">
+                <img src="https://img.freepik.com/vetores-gratis/mao-segurando-o-conceito-de-telefone-celular-smartphone-ilustracao-de-arte-de-desenho-animado-desenhada-a-mao_56104-1117.jpg" alt="Ícone de celular">
                 <h3 class="lista__item">Celular</h3>
             </li>
         </ul>
