--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC9WKR3dP_F1kqBqvcLohXfSdMehmkC1xUvw&s" alt="Ícone de computador">
+                <img src="https://w7.pngwing.com/pngs/190/143/png-transparent-computer-software-computer-hardware-computer-repair-technician-laptop-illustration-computer-network-computer-computer-monitor-accessory.png" alt="Ícone de computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
